Preparing to process alba structure. Not enough memory on my laptop

--- a/magnumfe_projection_demo.ipynb
+++ b/magnumfe_projection_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,6 +144,162 @@
    "source": [
     "load_file = 'test_saving.npy'\n",
     "struct, struct_projected, piercings_list, p, mesh = load_piercing_data(load_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step by step what I am doing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Show projection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Text(0.5, 0, 'z')"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ax = show_structure_points(struct)\n",
+    "\n",
+    "show_structure_points(struct_projected, ax=ax)\n",
+    "\n",
+    "ax.set_xlabel('x')\n",
+    "ax.set_ylabel('y')\n",
+    "ax.set_zlabel('z')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Take a point and show a pierced ray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x2626ca48>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "projected_points = np.array(struct_projected.vertices)\n",
+    "_, _, tetra = get_mesh_data(mesh)\n",
+    "\n",
+    "i = 1000\n",
+    "pt = projected_points[struct_projected.faces[i,0], :]\n",
+    "\n",
+    "phi, theta = 90, 15\n",
+    "theta_r = np.deg2rad(theta)\n",
+    "phi_r = np.deg2rad(phi)\n",
+    "\n",
+    "nx0 = np.cross(p, pt)\n",
+    "y = np.linspace(-1000, 0, 1000)\n",
+    "x = nx0[1]/np.sin(theta_r)*np.ones(y.shape)\n",
+    "z = y*np.tan(theta_r)+nx0[0]/np.cos(theta_r)\n",
+    "\n",
+    "ax.plot(x, y, z, c='red')\n",
+    "\n",
+    "ax.scatter(pt[0], pt[1], pt[2], s=100, c='g')\n",
+    "\n",
+    "# get the points of the pierced tetrahedra\n",
+    "indx = piercings_list[i][1]\n",
+    "points = np.array(struct.vertices)\n",
+    "pierced_tetra_points = points[tetra[indx, :].flatten(), :]\n",
+    "\n",
+    "ax.scatter(pierced_tetra_points[:,0], pierced_tetra_points[:,1], pierced_tetra_points[:,2], s=100, c='g')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.savefig('img/piercing_demo.png', dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Show one of the pierced tetrahedra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<mpl_toolkits.mplot3d.art3d.Line3D at 0x304aa118>]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "\n",
+    "deep_reload(xmcd_projection)\n",
+    "from xmcd_projection import *\n",
+    "\n",
+    "# Create a new plot\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot((111), projection='3d', proj_type='ortho')\n",
+    "\n",
+    "selected_triangles = get_triangles_from_tetra(points, tetra[indx, :])\n",
+    "vts = selected_triangles.reshape(-1, 3)\n",
+    "ax.plot_trisurf(vts[:,0], vts[:,1], vts[:,2])\n",
+    "ax.scatter(vts[:,0], vts[:,1], vts[:,2], 'ko')\n",
+    "ax.set_xlabel('x')\n",
+    "\n",
+    "\n",
+    "y = np.linspace(-150, -80, 100)\n",
+    "x = nx0[1]/np.sin(theta_r)*np.ones(y.shape)\n",
+    "z = y*np.tan(theta_r)+nx0[0]/np.cos(theta_r)\n",
+    "\n",
+    "ax.plot(x, y, z, c='red')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.savefig('img/piercing_demo1.png', dpi=300)"
    ]
   },
   {
