Working on PEEM. Will restructure a bit

--- a/magnumfe_projection.ipynb
+++ b/magnumfe_projection.ipynb
@@ -14,10 +14,7 @@
     "from xmcd_projection import *\n",
     "from glob import glob\n",
     "import os\n",
-    "import cv2\n",
     "from copy import copy, deepcopy\n",
-    "from skimage.color import rgb2gray, rgba2rgb\n",
-    "from skimage.filters import gaussian\n",
     "from skimage.io import imread, imsave"
    ]
   },
@@ -30,11 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_path = r\"D:\\Magnumfe\\al6-1-1_peem_profile1_fields\"\n",
+    "folder_path = r\"D:\\Magnumfe\\al6-1-1_peem_profile2_10mT15deg\"\n",
     "\n",
     "data_folder = os.path.join(folder_path, \"data\")\n",
     "mag_files = glob(os.path.join(data_folder, \"*.csv\"))\n",
@@ -46,16 +43,9 @@
     "mag_files = [mf for _, mf in sorted(zip(indx, mag_files))]\n",
     "# get the mesh and magnetisation\n",
     "mesh0 = get_mesh(msh_file)\n",
-    "points0, _, _ = get_mesh_data(mesh0)\n",
+    "points0 = mesh0.points\n",
     "mesh = ground_mesh(deepcopy(mesh0))\n",
     "magnetisation, _ = get_magnumfe_magnetisation(mag_files[0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Make sure that the projection vector is correct and that the structure is oriented well"
    ]
   },
   {
@@ -67,6 +57,13 @@
     "struct = get_struct_from_mesh(mesh)\n",
     "points, faces, tetra = get_mesh_data(mesh)\n",
     "struct.faces = frozen_to_numpy(get_edge_faces(tetra))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Make sure that the projection vector is correct and that the structure is oriented well"
    ]
   },
   {
@@ -84,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,14 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6236436367034912\n"
+      "46673.059995889664\n"
      ]
     }
    ],
@@ -135,25 +132,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "struct = get_struct_from_mesh(mesh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "points, faces, tetra = get_mesh_data(mesh)\n",
-    "points0, _, _ = get_mesh_data(mesh0)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -163,9 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File not found. Generating shuffle indx\n"
+     ]
+    }
+   ],
    "source": [
     "magnetisation, coords = get_magnumfe_magnetisation(mag_files[-1])\n",
     "# magnetisation *= -1\n",
@@ -189,104 +175,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xmcd_value = get_xmcd_from_piercings_list(mesh, magnetisation, piercings_list)\n",
-    "mag_colors = get_struct_face_mag_color(struct, magnetisation)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "deep_reload(xmcd_projection)\n",
     "from xmcd_projection import *\n",
-    "\n",
-    "vis = MagnumfeVisualizer(struct, struct_projected, xmcd_value, struct_colors=mag_colors)\n",
-    "# vis.background_color = 155/255\n",
-    "vis.update_view()\n",
-    "vis.show()"
+    "xmcd_value = get_xmcd_from_piercings_list(tetra, magnetisation, piercings_list)\n",
+    "mag_colors = get_struct_face_mag_color(struct, magnetisation)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# vis.set_camera(azi=208, center=vis.get_structs_center(), dist=5e5)\n",
-    "# vis.set_camera(azi=18, center=vis.get_structs_center(), dist=6e5)\n",
-    "vis.update_colors(xmcd_value, mag_colors)\n",
-    "vis.background_color = 127/255\n",
-    "vis.update_view()\n",
-    "vis.set_camera(azi=18, center=[600, -5000, 0], dist=7e5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vis.set_camera(azi=18, center=[-100, 100, 0], dist=1e5)\n",
-    "vis.xmcd_color[:, :3] = 127/255*np.ones((vis.xmcd_color.shape[0], 3))\n",
-    "vis.meshdata_projected.setFaceColors(vis.xmcd_color)\n",
-    "vis.background_color = 127/255\n",
-    "# vis.update_view()\n",
-    "vis.update_view()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Adding blur to the image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x28a375442e8>"
+       "1"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "img = vis.get_view_image()\n",
-    "\n",
-    "img1 = np.swapaxes(gaussian(rgb2gray(rgba2rgb(img)), sigma=4), 0, 1)\n",
-    "plt.imshow(img1, cmap='gray')"
+    "vis.background_color"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "deep_reload(xmcd_projection)\n",
+    "from xmcd_projection import *\n",
+    "center_struct = [-100, 100, 0]\n",
+    "dist_struct = 1e5\n",
+    "center_peem = [600, -5000, 0]\n",
+    "dist_peem = 7e5\n",
+    "\n",
+    "vis = MagnumfeVisualizer(struct, struct_projected, projected_xmcd=xmcd_value, struct_colors=mag_colors)\n",
+    "vis.update_view()\n",
+    "vis.show()\n",
+    "vis.set_camera(azi=18, center=center_peem, dist=dist_peem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vis.update_colors(xmcd_value, mag_colors)\n",
+    "vis.set_camera(azi=18, center=center_peem, dist=dist_peem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "vis.struct_colors = get_struct_face_mag_color(struct, magnetisation, cmap_name='seismic')\n",
+    "vis.update_view()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "vis.set_camera(azi=18, center=center_struct, dist=dist_struct)\n",
+    "vis.hide_projection()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Saving one render"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[0.71372549, 0.71372549, 0.71372549, 1.        ],\n",
+       "       [0.8627451 , 0.8627451 , 0.8627451 , 1.        ],\n",
+       "       [0.27058824, 0.27058824, 0.27058824, 1.        ],\n",
+       "       ...,\n",
+       "       [0.29019608, 0.29019608, 0.29019608, 1.        ],\n",
+       "       [0.32156863, 0.32156863, 0.32156863, 1.        ],\n",
+       "       [0.88235294, 0.88235294, 0.88235294, 1.        ]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "imsave(os.path.join(folder_path, 'processed', 'shadow_final.png'), img1)\n",
-    "vis.set_camera(azi=18, center=[0, 0, 0], dist=1e5)\n",
-    "imsave(os.path.join(folder_path, 'processed', 'shadow_final.png'), img1)"
+    "vis.struct_colors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vis.save_render(os.path.join(folder_path, 'processed', 'shadow_final.png'))\n",
+    "blurred = vis.get_blurred_image(desired_background=0.7)\n",
+    "imsave(os.path.join(folder_path, 'processed', 'shadow_final_blurred.png'), (blurred*255).astype(np.uint8), check_contrast=False)\n",
+    "\n",
+    "vis.set_camera(azi=18, center=center_struct, dist=dist_struct)\n",
+    "vis.hide_projection()\n",
+    "vis.save_render(os.path.join(folder_path, 'processed', 'structure_view.png'))"
    ]
   },
   {
@@ -298,62 +313,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 205,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [03:28<00:00, 21.13s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "desired_background = 0.7 # if not None, adjusts the contrast so that the background is of the desired value in the blurred image\n",
     "savedir = os.path.join(folder_path, 'processed', 'xmcd_projection')\n",
-    "if not os.path.exists(savedir):\n",
-    "    os.makedirs(savedir)\n",
-    "    \n",
-    "for mf in tqdm(mag_files):\n",
+    "savedir_blurred = savedir+'_blurred1'\n",
+    "savedir_structure = os.path.join(folder_path, 'processed', 'projected_structure')\n",
+    "for sd in (savedir, savedir_blurred, savedir_structure):\n",
+    "    if not os.path.exists(sd):\n",
+    "        os.makedirs(sd)\n",
+    "\n",
+    "for mf in mag_files:\n",
     "#     file_num = int(mf.split('.')[-2])\n",
     "    file_num = int(mf.split('_')[-1].split('.')[0])\n",
+    "    # get the magnetisation and xmcd\n",
     "    magnetisation, _ = get_magnumfe_magnetisation(mf)\n",
-    "#     magnetisation *= -1\n",
     "    magnetisation = magnetisation[shuffle_indx, :]\n",
-    "    xmcd_value = get_xmcd_from_piercings_list(mesh, magnetisation, piercings_list)\n",
+    "    xmcd_value = get_xmcd_from_piercings_list(tetra, magnetisation, piercings_list)\n",
     "    mag_colors = get_struct_face_mag_color(struct, magnetisation)\n",
+    "    # update the view\n",
     "    vis.update_colors(xmcd_value, mag_colors)\n",
-    "    image = vis.save_render(os.path.join(savedir, 'step_{}.png'.format(file_num)))"
+    "#     vis.set_camera(azi=18, center=center_peem, dist=dist_peem)\n",
+    "    file_name = 'step_{}.png'.format(file_num)\n",
+    "#     image = vis.save_render(os.path.join(savedir, file_name))\n",
+    "    # save the blurred image\n",
+    "    blurred = vis.get_blurred_image(desired_background=desired_background)\n",
+    "    imsave(os.path.join(savedir_blurred, file_name), (blurred*255).astype(np.uint8), check_contrast=False)\n",
+    "    # save the image of the structure\n",
+    "#     vis.set_camera(azi=18, center=center_struct, dist=dist_struct)\n",
+    "#     vis.hide_projection()\n",
+    "#     image = vis.save_render(os.path.join(savedir_structure, file_name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [03:23<00:00, 20.26s/it]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'D:\\\\Magnumfe\\\\al6-1-1_peem_profile1_001'"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "folder_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "desired_background = 0.7 # if not None, adjusts the contrast so that the background is of the desired value in the blurred image\n",
+    "\n",
     "savedir = os.path.join(folder_path, 'processed', 'xmcd_projection_inv')\n",
-    "if not os.path.exists(savedir):\n",
-    "    os.makedirs(savedir)\n",
-    "    \n",
-    "for mf in tqdm(mag_files):\n",
+    "savedir_blurred = savedir+'_blurred1'\n",
+    "savedir_structure = os.path.join(folder_path, 'processed', 'projected_structure_inv')\n",
+    "for sd in (savedir, savedir_blurred, savedir_structure):\n",
+    "    if not os.path.exists(sd):\n",
+    "        os.makedirs(sd)\n",
+    "        \n",
+    "for mf in mag_files:\n",
     "#     file_num = int(mf.split('.')[-2])\n",
     "    file_num = int(mf.split('_')[-1].split('.')[0])\n",
     "    magnetisation, _ = get_magnumfe_magnetisation(mf)\n",
     "    magnetisation *= -1\n",
     "    magnetisation = magnetisation[shuffle_indx, :]\n",
-    "    xmcd_value = get_xmcd_from_piercings_list(mesh, magnetisation, piercings_list)\n",
+    "    xmcd_value = get_xmcd_from_piercings_list(tetra, magnetisation, piercings_list, p=p)\n",
     "    mag_colors = get_struct_face_mag_color(struct, magnetisation)\n",
+    "    # update the view\n",
     "    vis.update_colors(xmcd_value, mag_colors)\n",
-    "    image = vis.save_render(os.path.join(savedir, 'step_{}.png'.format(file_num)))"
+    "    vis.set_camera(azi=18, center=center_peem, dist=dist_peem)\n",
+    "    file_name = 'step_{}.png'.format(file_num)\n",
+    "#     image = vis.save_render(os.path.join(savedir, file_name))\n",
+    "    # save the blurred image\n",
+    "    blurred = vis.get_blurred_image(desired_background=desired_background)\n",
+    "    imsave(os.path.join(savedir_blurred, file_name), (blurred*255).astype(np.uint8), check_contrast=False)\n",
+    "#     # save the image of the structure\n",
+    "#     vis.set_camera(azi=18, center=center_struct, dist=dist_struct)\n",
+    "#     vis.hide_projection()\n",
+    "#     image = vis.save_render(os.path.join(savedir_structure, file_name))\n"
    ]
   },
   {
