Fixed issue with numerical artefacts

--- a/magnumfe_projection.ipynb
+++ b/magnumfe_projection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,20 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# folder_path = r\"C:\\Users\\lukas\\Desktop\\al6-1-1_peem_profile2_10mT15deg\"\n",
-    "folder_path = r\"F:\\PhD_data\\Simulations\\Alba_spirals\\scaled\\al6-1-1_asbuiltnotop_scaled\"\n",
+    "folder_path = r\"D:\\Magnumfe\\al6-1-1_peem_profile2_10mT15deg\"\n",
     "\n",
     "data_folder = os.path.join(folder_path, \"data\")\n",
     "mag_files = glob(os.path.join(data_folder, \"*.csv\"))\n",
     "raytracing_file = os.path.join(data_folder, \"raytracing.npy\")\n",
     "\n",
     "# sort mag files\n",
-    "indx = [int(mf.split('.')[-2]) for mf in mag_files]\n",
-    "# indx = [int(mf.split('_')[-1].split('.')[0]) for mf in mag_files]\n",
+    "# indx = [int(mf.split('.')[-2]) for mf in mag_files]\n",
+    "indx = [int(mf.split('_')[-1].split('.')[0]) for mf in mag_files]\n",
     "mag_files = [mf for _, mf in sorted(zip(indx, mag_files))]"
    ]
   },
@@ -54,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,14 +123,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 29%|███████                 | 32049/109392 [03:53<09:22, 137.59it/s]D:\\Programs\\xmcd-projection\\xmcd_projection\\raytracing.py:80: UserWarning: Wrong number of intersections! Ensure that tetrahedra are valid and that the projection plane does not intersect the structure. If this happens rarely, it could be a numerical artefact.\n",
+      "  except ValueError as e:\n",
+      "100%|███████████████████████| 109392/109392 [13:17<00:00, 137.21it/s]\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.093745708465576\n"
+      "829.9110107421875\n"
      ]
     }
    ],
@@ -159,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,10 +201,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "deep_reload(xmcd_projection)\n",
+    "from xmcd_projection import *\n",
     "center_struct = [-100, 100, 0]\n",
     "dist_struct = 1e5\n",
     "center_peem = [600, -5000, 0]\n",
@@ -222,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.8"
   },
   "toc": {
    "base_numbering": 1,
