--- a/magnumfe_projection.ipynb
+++ b/magnumfe_projection.ipynb
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_path = r\"D:\\Magnumfe\\al6-1-1_peem_profile2\"\n",
+    "folder_path = r\"D:\\Magnumfe\\al6-1-1_asbuiltextnotop\"\n",
     "\n",
     "data_folder = os.path.join(folder_path, \"data\")\n",
     "mag_files = glob(os.path.join(data_folder, \"*.csv\"))\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,9 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 173,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File not found. Generating shuffle indx\n"
+     ]
+    }
+   ],
    "source": [
     "magnetisation, mag_points = load_mesh_magnetisation(mag_files[-1])\n",
     "shuffle_file = os.path.join(data_folder, \"shuffle_indx.npy\")\n",
@@ -173,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,19 +191,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
     "# deep_reload(xmcd_projection)\n",
     "# from xmcd_projection import *\n",
+    "azi=90\n",
     "center_struct = [-100, 100, 0]\n",
     "dist_struct = 1e5\n",
     "center_peem = [600, -5000, 0]\n",
     "dist_peem = 7e5\n",
     "\n",
     "vis = MeshVisualizer(struct, struct_projected, projected_xmcd=xmcd_value, struct_colors=mag_colors)\n",
-    "vis.show(azi=18, center=center_peem, dist=dist_peem)"
+    "vis.show(azi=azi, center=center_peem, dist=dist_peem)"
    ]
   },
   {
@@ -214,12 +223,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
     "vis.update_colors(xmcd_value, mag_colors)\n",
-    "vis.view_both(azi=18, center=center_peem, dist=dist_peem)"
+    "vis.view_both(azi=azi, center=center_peem, dist=dist_peem)"
    ]
   },
   {
@@ -231,11 +240,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis.view_projection(azi=18, center=center_peem, dist=dist_peem)"
+    "vis.view_projection(azi=azi, center=center_peem, dist=dist_peem)"
    ]
   },
   {
@@ -247,11 +256,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis.view_struct(azi=18, center=center_struct, dist=dist_struct)"
+    "vis.view_struct(azi=azi, center=center_struct, dist=dist_struct)"
    ]
   },
   {
@@ -263,17 +272,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis.view_both(azi=18, center=center_peem, dist=dist_peem)\n",
+    "vis.view_both(azi=azi, center=center_peem, dist=dist_peem)\n",
     "vis.save_render(os.path.join(folder_path, 'processed', 'shadow_final.png'))\n",
     "vis.view_projection()\n",
     "blurred = vis.get_blurred_image(desired_background=0.7)\n",
     "imsave(os.path.join(folder_path, 'processed', 'shadow_final_blurred.png'), (blurred*255).astype(np.uint8), check_contrast=False)\n",
     "\n",
-    "vis.view_struct(azi=18, center=center_struct, dist=dist_struct)\n",
+    "vis.view_struct(azi=azi, center=center_struct, dist=dist_struct)\n",
     "vis.save_render(os.path.join(folder_path, 'processed', 'structure_view.png'))"
    ]
   },
@@ -286,17 +295,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████| 121/121 [05:05<00:00,  2.53s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "desired_background = 0.7 # if not None, adjusts the contrast so that the background is of the desired value in the blurred image\n",
     "\n",
@@ -319,7 +320,7 @@
     "    mag_colors = get_struct_face_mag_color(struct, magnetisation)\n",
     "    # update the view\n",
     "    vis.update_colors(xmcd_value, mag_colors)\n",
-    "    vis.view_projection(azi=18, center=center_peem, dist=dist_peem)\n",
+    "    vis.view_projection(center=center_peem, dist=dist_peem)\n",
     "    file_name = 'step_{}.png'.format(file_num)\n",
     "    image = vis.save_render(os.path.join(savedir, file_name))\n",
     "    \n",
@@ -328,23 +329,15 @@
     "    imsave(os.path.join(savedir_blurred, file_name), blurred, check_contrast=False)\n",
     "    \n",
     "    # save the image of the structure\n",
-    "    vis.view_struct(azi=18, center=center_struct, dist=dist_struct)\n",
+    "    vis.view_struct(center=center_struct, dist=dist_struct)\n",
     "    image = vis.save_render(os.path.join(savedir_structure, file_name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████| 121/121 [04:27<00:00,  2.21s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "desired_background = 0.7 # if not None, adjusts the contrast so that the background is of the desired value in the blurred image\n",
     "\n",
@@ -365,7 +358,7 @@
     "    mag_colors = get_struct_face_mag_color(struct, magnetisation)\n",
     "    # update the view\n",
     "    vis.update_colors(xmcd_value, mag_colors)\n",
-    "    vis.view_projection(azi=18, center=center_peem, dist=dist_peem)\n",
+    "    vis.view_projection(center=center_peem, dist=dist_peem)\n",
     "    file_name = 'step_{}.png'.format(file_num)\n",
     "    image = vis.save_render(os.path.join(savedir, file_name))\n",
     "    \n",
@@ -374,7 +367,7 @@
     "    imsave(os.path.join(savedir_blurred, file_name), blurred, check_contrast=False)\n",
     "    \n",
     "    # save the image of the structure\n",
-    "    vis.view_struct(azi=18, center=center_struct, dist=dist_struct)\n",
+    "    vis.view_struct(center=center_struct, dist=dist_struct)\n",
     "    image = vis.save_render(os.path.join(savedir_structure, file_name))\n"
    ]
   },
@@ -387,21 +380,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████| 121/121 [00:02<00:00, 45.29it/s]"
+      "100%|██████████████████████████████| 121/121 [00:10<00:00, 11.39it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The output video is D:\\Magnumfe\\al6-1-1_peem_profile2_001\\processed\\projection_movie_inv_blurred.mp4\n"
+      "The output video is D:\\Magnumfe\\al6-1-1_peem_profile2\\processed\\projection_movie_blurred.mp4\n"
      ]
     },
     {
@@ -451,28 +444,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "121it [00:09, 12.48it/s]"
+      "\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:01,  1.09s/it]\u001b[A\n",
+      "3it [00:01,  3.12it/s]\u001b[A\n",
+      "5it [00:01,  4.05it/s]\u001b[A\n",
+      "7it [00:01,  5.16it/s]\u001b[A\n",
+      "9it [00:01,  7.00it/s]\u001b[A\n",
+      "13it [00:02,  9.92it/s]\u001b[A\n",
+      "15it [00:02,  6.92it/s]\u001b[A\n",
+      "17it [00:03,  5.98it/s]\u001b[A\n",
+      "18it [00:03,  5.84it/s]\u001b[A\n",
+      "19it [00:03,  5.50it/s]\u001b[A\n",
+      "20it [00:03,  6.03it/s]\u001b[A\n",
+      "21it [00:03,  5.78it/s]\u001b[A\n",
+      "22it [00:04,  5.24it/s]\u001b[A\n",
+      "23it [00:04,  5.17it/s]\u001b[A\n",
+      "24it [00:04,  4.46it/s]\u001b[A\n",
+      "25it [00:04,  4.83it/s]\u001b[A\n",
+      "26it [00:04,  4.90it/s]\u001b[A\n",
+      "27it [00:05,  4.67it/s]\u001b[A\n",
+      "28it [00:05,  5.16it/s]\u001b[A\n",
+      "29it [00:05,  4.97it/s]\u001b[A\n",
+      "31it [00:05,  5.83it/s]\u001b[A\n",
+      "32it [00:06,  5.13it/s]\u001b[A\n",
+      "33it [00:06,  4.95it/s]\u001b[A\n",
+      "34it [00:06,  5.00it/s]\u001b[A\n",
+      "35it [00:06,  5.80it/s]\u001b[A\n",
+      "36it [00:06,  5.89it/s]\u001b[A\n",
+      "38it [00:06,  7.28it/s]\u001b[A\n",
+      "39it [00:07,  7.76it/s]\u001b[A\n",
+      "40it [00:07,  7.25it/s]\u001b[A\n",
+      "42it [00:07,  7.38it/s]\u001b[A\n",
+      "44it [00:07,  9.69it/s]\u001b[A\n",
+      "46it [00:07,  9.56it/s]\u001b[A\n",
+      "48it [00:08,  7.76it/s]\u001b[A\n",
+      "49it [00:08,  6.86it/s]\u001b[A\n",
+      "50it [00:08,  7.01it/s]\u001b[A\n",
+      "51it [00:08,  6.56it/s]\u001b[A\n",
+      "53it [00:08,  7.77it/s]\u001b[A\n",
+      "54it [00:09,  7.40it/s]\u001b[A\n",
+      "55it [00:09,  7.00it/s]\u001b[A\n",
+      "57it [00:09,  7.17it/s]\u001b[A\n",
+      "58it [00:09,  6.38it/s]\u001b[A\n",
+      "60it [00:10,  6.53it/s]\u001b[A\n",
+      "61it [00:10,  6.57it/s]\u001b[A\n",
+      "62it [00:10,  6.69it/s]\u001b[A\n",
+      "63it [00:10,  6.55it/s]\u001b[A\n",
+      "64it [00:10,  6.44it/s]\u001b[A\n",
+      "65it [00:10,  6.48it/s]\u001b[A\n",
+      "66it [00:10,  6.55it/s]\u001b[A\n",
+      "67it [00:11,  6.05it/s]\u001b[A\n",
+      "68it [00:11,  6.35it/s]\u001b[A\n",
+      "69it [00:11,  6.40it/s]\u001b[A\n",
+      "70it [00:11,  6.69it/s]\u001b[A\n",
+      "72it [00:11,  9.10it/s]\u001b[A\n",
+      "74it [00:11,  9.01it/s]\u001b[A\n",
+      "76it [00:12, 10.71it/s]\u001b[A\n",
+      "78it [00:12, 11.02it/s]\u001b[A\n",
+      "80it [00:12, 10.43it/s]\u001b[A\n",
+      "82it [00:12,  9.03it/s]\u001b[A\n",
+      "83it [00:12,  7.90it/s]\u001b[A\n",
+      "85it [00:13,  9.46it/s]\u001b[A\n",
+      "87it [00:13,  8.80it/s]\u001b[A\n",
+      "90it [00:13, 10.44it/s]\u001b[A\n",
+      "92it [00:13,  8.85it/s]\u001b[A\n",
+      "93it [00:13,  8.21it/s]\u001b[A\n",
+      "97it [00:14, 12.92it/s]\u001b[A\n",
+      "101it [00:14, 17.01it/s]\u001b[A\n",
+      "104it [00:14, 19.49it/s]\u001b[A\n",
+      "108it [00:14, 22.73it/s]\u001b[A\n",
+      "112it [00:14, 25.31it/s]\u001b[A\n",
+      "116it [00:14, 27.25it/s]\u001b[A\n",
+      "121it [00:14,  8.14it/s]\u001b[A\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The output video is D:\\Magnumfe\\al6-1-1_peem_profile2_001\\processed\\projection_movie_blurred.mp4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "The output video is D:\\Magnumfe\\al6-1-1_asbuiltextnotop\\processed\\projection_movie_blurred.mp4\n"
      ]
     }
    ],
@@ -481,7 +539,7 @@
     "from tqdm import tqdm\n",
     "FPS = 10\n",
     "\n",
-    "folder_path = r\"D:\\Magnumfe\\al6-1-1_peem_profile2_001\"\n",
+    "# folder_path = r\"D:\\Magnumfe\\al6-1-1_peem_profile1\"\n",
     "basesavedir = os.path.join(folder_path, 'processed')\n",
     "savedirs = [\n",
     "    os.path.join(basesavedir, 'xmcd_projection_blurred'),\n",
