--- a/testing1.ipynb
+++ b/testing1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,14 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from xmcd_projection.projection import project_structure\n",
     "p = get_projection_vector(90, 15)\n",
     "\n",
     "struct = mesh.get_bounding_struct()\n",
-    "struct_projected = project_structure(struct, p, x0 = [0,0,float(np.min(struct.vertices[:,2]))])"
+    "struct_projected = project_structure(struct, p)"
    ]
   },
   {
@@ -60,71 +61,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'F:\\\\PhD_data\\\\Simulations\\\\Alba_spirals\\\\scaled\\\\al6-1-1_asbuiltnotop_scaled\\\\data\\\\al6-1-1_asbuiltnotop_scaled.msh'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "msh_file"
+    "\n",
+    "index_triangle, index_ray, locations = ray_triangle_id(\n",
+    "    triangles, ray_origins, ray_directions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "Exception",
-     "evalue": "Wrong number of intersections!",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-17-3d7c0b4f92b3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpiercings_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_piercings\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmesh\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Documents\\PhD_programs\\xmcd_projection\\xmcd_projection\\piercings.py\u001b[0m in \u001b[0;36mget_piercings\u001b[1;34m(mesh, p, n)\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[0mprojected_struct\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mproject_structure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstruct\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[1;31m# get all the piercing data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m     piercings_list = get_points_piercings(\n\u001b[0m\u001b[0;32m     22\u001b[0m         projected_struct.triangles_center, p, mesh.triangles)\n\u001b[0;32m     23\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mpiercings_list\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Documents\\PhD_programs\\xmcd_projection\\xmcd_projection\\piercings_utils.py\u001b[0m in \u001b[0;36mget_points_piercings\u001b[1;34m(ray_origins, p, triangles)\u001b[0m\n\u001b[0;32m     14\u001b[0m     index_triangle, index_ray, locations = ray_triangle_id(\n\u001b[0;32m     15\u001b[0m         triangles, ray_origins, ray_directions)\n\u001b[1;32m---> 16\u001b[1;33m     piercings_list = [\n\u001b[0m\u001b[0;32m     17\u001b[0m         get_piercings_frompt_lengths(\n\u001b[0;32m     18\u001b[0m             \u001b[0mlocations\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex_ray\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Documents\\PhD_programs\\xmcd_projection\\xmcd_projection\\piercings_utils.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     15\u001b[0m         triangles, ray_origins, ray_directions)\n\u001b[0;32m     16\u001b[0m     piercings_list = [\n\u001b[1;32m---> 17\u001b[1;33m         get_piercings_frompt_lengths(\n\u001b[0m\u001b[0;32m     18\u001b[0m             \u001b[0mlocations\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex_ray\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m             index_triangle[index_ray == i] // 4)\n",
-      "\u001b[1;32m~\\Documents\\PhD_programs\\xmcd_projection\\xmcd_projection\\piercings_utils.py\u001b[0m in \u001b[0;36mget_piercings_frompt_lengths\u001b[1;34m()\u001b[0m\n\u001b[0;32m     32\u001b[0m         \u001b[0mpts\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlocations\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mintersected_tetrahedra_indx\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0midx\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mpts\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Wrong number of intersections!'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     35\u001b[0m         intersected_tetrahedra_lengths[i] = np.linalg.norm(\n\u001b[0;32m     36\u001b[0m             pts[0, :] - pts[1, :])\n",
-      "\u001b[1;31mException\u001b[0m: Wrong number of intersections!"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "piercings_list = get_piercings(mesh, p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from trimesh.ray.ray_triangle import ray_triangle_id\n",
+    "from time import time\n",
+    "\n",
+    "ray_origins = struct_projected.triangles_center\n",
+    "triangles = mesh.triangles\n",
+    "n = ray_origins.shape[0]\n",
+    "ray_directions = np.repeat(p[None, :], n, axis=0)\n",
+    "t0 = time()\n",
+    "index_triangle, index_ray, locations = ray_triangle_id(\n",
+    "    triangles, ray_origins, ray_directions)\n",
+    "time()-t0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([115.20717707, 115.38092886, 115.79495328, 115.38092886,\n",
-       "        114.28685297, 114.30001771, 114.9463619 , 114.30001771,\n",
-       "        115.20717707, 115.13825907, 114.9463619 , 115.13825907,\n",
-       "        114.28685297, 114.22120588, 113.77418271, 113.86698704,\n",
-       "        113.56758317, 113.77418271, 113.56758317, 113.45224506,\n",
-       "        113.04318658, 113.45224506, 113.04318658, 112.99075897,\n",
-       "        112.99075897, 112.85378786, 114.22120588, 113.86698704]),\n",
-       " array([    0,     2,     5,     7,    22,    23,    44,    46,    52,\n",
-       "           54,    65,    67,   142,   143,   165,   166,   234,   235,\n",
-       "          325,   326,  1348,  1349,  1376,  1379,  3152,  3153, 29345,\n",
-       "        29346], dtype=int64))"
+       "4.020192384719849"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "import trimesh\n",
+    "from trimesh.ray.ray_triangle import RayMeshIntersector\n",
+    "from xmcd_projection.raytracing import get_piercings_frompt_lengths\n",
+    "from trimesh.ray.ray_triangle import ray_triangle_id\n",
+    "from trimesh import triangles as triangles_mod\n",
+    "from joblib import Parallel, delayed\n",
+    "from time import time\n",
+    "t0 = time()\n",
+    "\n",
+    "ray_origins = struct_projected.triangles_center\n",
+    "triangles = mesh.triangles\n",
+    "triangles_normal = triangles_mod.normals(triangles)[0]\n",
+    "tree = triangles_mod.bounds_tree(triangles)\n",
+    "\n",
+    "pnew = p[np.newaxis, :]\n",
+    "\n",
+    "def ray_id_fun(orig): return ray_triangle_id(\n",
+    "    triangles, orig[np.newaxis, :], pnew, triangles_normal=triangles_normal, tree=tree)\n",
+    "ray_ids_generator = (ray_id_fun(orig) for orig in ray_origins)\n",
+    "\n",
+    "# ray_ids_generator = Parallel(n_jobs=5)(delayed(ray_id_fun)(orig) for orig in ray_origins)\n",
+    "\n",
+    "piercings_list = [\n",
+    "    get_piercings_frompt_lengths(\n",
+    "        ri[2],\n",
+    "        ri[0] // 4)\n",
+    "    for ri in ray_ids_generator]\n",
+    "# ray_id_fun = lambda tri, orig, dr: ray_triangle_id(tri, orig[np.newaxis, :], dr[np.newaxis, :], triangles_normal=triangles_normal, tree=tree)\n",
+    "# ray_ids = Parallel(n_jobs=5, prefer='threads')(delayed(ray_id_fun)(triangles, ray_origins[i, :], p) for i in range(ray_origins.shape[0]))\n",
+    "# for i in tqdm(range(ray_origins.shape[0])):\n",
+    "#     ray_ids.append(raymesh.intersects_id(ray_origins[i:i+1,:], ray_directions[i:i+1,:], return_locations=True))\n",
+    "    \n",
+    "# piercings_list = [\n",
+    "#         get_piercings_frompt_lengths(\n",
+    "#             ri[2],\n",
+    "#             ri[0]//4)\n",
+    "#         for ri in ray_ids]\n",
+    "#         ray_ids.append(ray_triangle_id(\n",
+    "#     triangles, ray_origins[i:i+1,:], ray_directions[i:i+1,:])\n",
+    "\n",
+    "# ray_ids = [ray_triangle_id(\n",
+    "#     triangles, ray_origins[i:i+1,:], ray_directions[i:i+1,:]) for i in range(ray_origins.shape[0])]\n",
+    "time() - t0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1.57584545e+00, 2.15633670e-01, 1.36170550e+00, 1.11690918e+00,\n",
+       "        3.67643037e+00, 8.21393687e-01, 2.83037785e+00, 1.19788373e-01,\n",
+       "        4.98082614e-02, 1.83106625e-01, 8.25954384e-02, 3.69264813e+00,\n",
+       "        1.80565156e+00, 5.21786108e+00, 3.24528079e-03, 1.57895597e+00,\n",
+       "        1.58428549e+00, 4.47678950e-01, 3.00885698e-01]),\n",
+       " array([   1,   16,  239,  240,  728, 1077, 1257, 1923, 1967, 3075, 3146,\n",
+       "        3195, 3227, 3262, 3344, 7210, 7211, 7212, 7213], dtype=int64))"
+      ]
+     },
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,17 +190,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 109,  109,  152,  152,  156,  156,  204,  220,  229,  486, 1314,\n",
+       "       1355, 2421, 2453, 2453, 3807, 4926, 4926, 7249, 9239], dtype=int64)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from xmcd_projection.piercings_utils import ray_triangle_id\n",
-    "ray_origins = struct_projected.triangles_center\n",
-    "triangles = mesh.triangles\n",
-    "n = ray_origins.shape[0]\n",
-    "ray_directions = np.repeat(p[None, :], n, axis=0)\n",
-    "index_triangle, index_ray, locations = ray_triangle_id(\n",
-    "    triangles, ray_origins, ray_directions)"
+    "np.sort(ray_ids[100][0]//4)"
    ]
   },
   {
